src/bindings/bindings_debug.rs

#[test]
fn bindgen_test_layout_Clay__StringArray() {
    const UNINIT: ::core::mem::MaybeUninit<Clay__StringArray> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay__StringArray>(),
        16usize,
        concat!("Size of: ", stringify!(Clay__StringArray))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay__StringArray>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay__StringArray))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).capacity) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay__StringArray),
            "::",
            stringify!(capacity)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay__StringArray),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).internalArray) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay__StringArray),
            "::",
            stringify!(internalArray)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Arena {
    pub nextAllocation: usize,
    pub capacity: usize,
    pub memory: *mut ::core::ffi::c_char,
}
#[test]
fn bindgen_test_layout_Clay_Arena() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Arena> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Arena>(),
        24usize,
        concat!("Size of: ", stringify!(Clay_Arena))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Arena>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_Arena))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nextAllocation) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Arena),
            "::",
            stringify!(nextAllocation)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).capacity) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Arena),
            "::",
            stringify!(capacity)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).memory) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Arena),
            "::",
            stringify!(memory)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Dimensions {
    pub width: f32,
    pub height: f32,
}
#[test]
fn bindgen_test_layout_Clay_Dimensions() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Dimensions> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Dimensions>(),
        8usize,
        concat!("Size of: ", stringify!(Clay_Dimensions))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Dimensions>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_Dimensions))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).width) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Dimensions),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).height) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Dimensions),
            "::",
            stringify!(height)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Vector2 {
    pub x: f32,
    pub y: f32,
}
#[test]
fn bindgen_test_layout_Clay_Vector2() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Vector2> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Vector2>(),
        8usize,
        concat!("Size of: ", stringify!(Clay_Vector2))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Vector2>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_Vector2))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Vector2),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Vector2),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Color {
    pub r: f32,
    pub g: f32,
    pub b: f32,
    pub a: f32,
}
#[test]
fn bindgen_test_layout_Clay_Color() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Color> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Color>(),
        16usize,
        concat!("Size of: ", stringify!(Clay_Color))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Color>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_Color))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).r) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Color),
            "::",
            stringify!(r)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).g) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Color),
            "::",
            stringify!(g)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).b) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Color),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).a) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Color),
            "::",
            stringify!(a)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BoundingBox {
    pub x: f32,
    pub y: f32,
    pub width: f32,
    pub height: f32,
}
#[test]
fn bindgen_test_layout_Clay_BoundingBox() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_BoundingBox> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_BoundingBox>(),
        16usize,
        concat!("Size of: ", stringify!(Clay_BoundingBox))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_BoundingBox>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_BoundingBox))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BoundingBox),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BoundingBox),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).width) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BoundingBox),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).height) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_BoundingBox),
            "::",
            stringify!(height)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ElementId {
    pub id: u32,
    pub offset: u32,
    pub baseId: u32,
    pub stringId: Clay_String,
}
#[test]
fn bindgen_test_layout_Clay_ElementId() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ElementId> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ElementId>(),
        32usize,
        concat!("Size of: ", stringify!(Clay_ElementId))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ElementId>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_ElementId))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementId),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).offset) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementId),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).baseId) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementId),
            "::",
            stringify!(baseId)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stringId) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ElementId),
            "::",
            stringify!(stringId)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CornerRadius {
    pub topLeft: f32,
    pub topRight: f32,
    pub bottomLeft: f32,
    pub bottomRight: f32,
}
#[test]
fn bindgen_test_layout_Clay_CornerRadius() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_CornerRadius> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_CornerRadius>(),
        16usize,
        concat!("Size of: ", stringify!(Clay_CornerRadius))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_CornerRadius>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_CornerRadius))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).topLeft) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_CornerRadius),
            "::",
            stringify!(topLeft)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).topRight) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_CornerRadius),
            "::",
            stringify!(topRight)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bottomLeft) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_CornerRadius),
            "::",
            stringify!(bottomLeft)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bottomRight) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_CornerRadius),
            "::",
            stringify!(bottomRight)
        )
    );
}
